--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
       <div class="hero-content">
         <h1>Safe and Reliable Rides</h1>
         <p>Book a cab for all your city rides and outstation travel needs.</p>
-        <button>Book Now</button>
+        <form action="">
+          <button type="submit">Book Now</button>
+        </form>
       </div>
     </section>
     
