--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="hero-content">
         <h1>Safe and Reliable Rides</h1>
         <p>Book a cab for all your city rides and outstation travel needs.</p>
-        <form action="">
+        <form action="./index2.html">
           <button type="submit">Book Now</button>
         </form>
       </div>
