--- a/index2.html
+++ b/index2.html
@@ -19,7 +19,9 @@
             <input type="password" placeholder="password">
         </div>
         <div class="form-field">
-            <button class="btn" type="submit">Log in</button>
+            <form action="./index3.html">
+                <button class="btn" type="submit">Log in</button>
+            </form>
         </div>
     </form>
 </body>
