--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <nav>
       <div class="logo">Real Cabs</div>
       <ul>
+        <li><a href="./index2.html">Sign up</a></li>
         <li><a href="#">Home</a></li>
         <li><a href="#">About</a></li>
-        <li><a href="#">Services</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
     </nav>
@@ -23,7 +23,7 @@
       <div class="hero-content">
         <h1>Safe and Reliable Rides</h1>
         <p>Book a cab for all your city rides and outstation travel needs.</p>
-        <form action="./index2.html">
+        <form action="./index3.html">
           <button type="submit">Book Now</button>
         </form>
       </div>
