--- a/index3.html
+++ b/index3.html
@@ -3,16 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Real Cabs</title>
+    <title>Ola</title>
+    <link rel="icon" type="image/x-icon" href="./frontal-taxi-cab.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBlRDbQbnEm0PWYiS0H5r3hxIAg5FP5kYU&libraries=places"></script>
+    <style>
+        #map{
+            position: absolute;
+            z-index: 0;
+        }
+#c{
+    position: relative;
+    z-index: 1;
+}
+#c1{
+    position: relative;
+    z-index: 1;
+    color: aliceblue;
+}
+    </style>
    
     
 </head>
-<body onload="initMap()">
-    <h1 class="text-center">Directions to get ride</h1>
+<body onload="initMap()"> <div id="map" style="height: 100%;width:100%;"></div>
+    <h1 class="text-center" id="c1">Directions to get ride</h1>
     <br><br>
-    <div class="container">
+   
+    <div class="container" id="c">
         <div class="form-group">
             <input type="text" class="form-control" placeholder="Source Location" id="source">
         </div>
@@ -24,8 +41,8 @@
         <button class="btn btn-primary">Get Ride
 
         </button>
-        <br>
-        <div id="map" style="height: 500px;width:100%;"></div>
+        <br><br>
+        <div ></div>
         <br>
     </div>
     
