pool-first-commit

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <li><a href="./index2.html">Sign up</a></li>
         <li><a href="#">Home</a></li>
         <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="./profile.html">Profile</a></li>
       </ul>
     </nav>
   </header>
@@ -23,9 +23,12 @@
       <div class="hero-content">
         <h1>Safe and Reliable Rides</h1>
         <p>Book a cab for all your city rides and outstation travel needs.</p>
-        <form action="./index3.html">
-          <button type="submit">Book Now</button>
-        </form>
+        <a href="./index3.html">
+          <button type="submit">Book a Ride</button>
+        </a>
+        <a href="./pool.html">
+          <button type="submit">Provide a Ride</button>
+        </a>
       </div>
     </section>
     
@@ -33,12 +36,12 @@
     <section class="services">
       
       <div class="service-card">
-        <img src="./2021-01-31.jpg" alt="Service 1">
+        <img src="./images/2021-01-31.jpg" alt="Service 1">
         <h3>City Rides</h3>
         <p>Get a cab for your daily commute within the city.</p>
       </div>
       <div class="service-card">
-        <img src="./WTi-Blog_01.jpg" alt="Service 2">
+        <img src="./images/WTi-Blog_01.jpg" alt="Service 2">
         <h3>Outstation Travel</h3>
         <p>Book a cab for outstation trips with family and friends.</p>
       </div>
