--- a/index2.html
+++ b/index2.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Real Cabs</title>
     <link rel="stylesheet" type="text/css" href="./style2.css">
+    <link rel="shortcut icon" href="./images/360_F_418015405_gym5TXugGl1D90UTf9wmb86n9JuddmkA.jpg" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&family=Roboto+Condensed&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="backgroundImage"></div>
