--- a/index3.html
+++ b/index3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ola</title>
+    <title>Real Cabs</title>
     <link rel="icon" type="image/x-icon" href="./frontal-taxi-cab.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBlRDbQbnEm0PWYiS0H5r3hxIAg5FP5kYU&libraries=places"></script>
